MET-5941 Technical Debt (#671)
* MET-5941 Fix some missing constructor Autowired.

Verify  PluginWithExecutionId false positive recursion issue

* MET-5941 Fix Filters.regex deprecation

* MET-5941 Re-trigger issues.

DereferencingManagementController HttpStatus false positive

DatasetService try with resources XsltTransformer.

* MET-5941 Fix issues.

DereferencingManagementController HttpStatus false positive

DatasetService try with resources XsltTransformer.

* MET-5941 Cleanup.

* MET-5941 ConnectionConfig on CloseableHttpClient.

* MET-5941 Remove deprecated appendCustomTrustoreToDefault

* MET-5941 Reduce block nesting

* MET-5941 Reduce cyclomatic complexity

* MET-5941 Cleanup tests

* MET-5941 Cleanup